--- a/src/app.css
+++ b/src/app.css
@@ -63,7 +63,6 @@ p {
 
 h1 {
 	font-size: 2rem;
-	text-align: center;
 }
 
 h2 {
@@ -2581,8 +2580,9 @@ table.quick-help-table td:first-of-type {
 .kfk-template-info {
 	font-size: 0.2rem;
 }
-.kfk-template-action-icon {
-	font-size: 1.5rem;
+.kfk-template-action-icon,
+.kfk-role-action-icon {
+	font-size: 0.5rem;
 }
 
 .kfk-link:hover {
@@ -2594,4 +2594,11 @@ table.quick-help-table td:first-of-type {
 }
 .kfk-dropdown .active a {
 	color: #ffffff;
+}
+.kfk-team-profile {
+	margin-top: 80px;
+	background-color: #e5dbff;
+	border-radius: 10px;
+	padding: 10px;
+	box-shadow: 0 0 0 0.125em rgba(255, 255, 255, 0.9);
 }
