--- a/src/app.css
+++ b/src/app.css
@@ -2638,3 +2638,9 @@ table.quick-help-table td:first-of-type {
 	bottom: 0px;
 	border: 1px solid #0000004c;
 }
+.kfk-tab-menu {
+	background-color: rgba(255, 255, 255, 0.5);
+	border-radius: 5px;
+	box-shadow: 0px 0px 5px rgba(20, 20, 20, 0.5);
+	min-height: 66px;
+}
