--- a/src/app.css
+++ b/src/app.css
@@ -2644,3 +2644,15 @@ table.quick-help-table td:first-of-type {
 	box-shadow: 0px 0px 5px rgba(20, 20, 20, 0.5);
 	min-height: 66px;
 }
+.kfk-login-container {
+	max-width: 400px;
+}
+.kfk-org-logo {
+	width: 48px;
+	height: 48px;
+	border-radius: 10px;
+	background-position: center; /* Center the image */
+	background-repeat: no-repeat; /* Do not repeat the image */
+	background-size: cover;
+	background-image: url('/static/svelte-welcome.png');
+}
