--- a/src/app.css
+++ b/src/app.css
@@ -626,22 +626,23 @@ input::placeholder {
 
 #leftPanel {
 	position: absolute;
-	top: 100px;
+	top: 50%;
 	left: 10px;
 	width: 50px;
-	height: 450px;
+	height: 350px;
+	transform: translate(0%, -50%);
 	box-shadow: 0 4px 8px 0 #000000cc, 0 6px 20px 0 #000000cc;
-	border-radius: 15px;
+	border-radius: 10px;
 	z-index: 10000000;
 }
 
 #designer-topMenu {
 	position: absolute;
-	z-index: 1000;
-	left: 70px;
+	z-index: 1000000;
+	width: 100%;
 }
 .whiteback {
-	background-color: #ffffffff;
+	background-color: rgba(255, 255, 255, 0.5);
 }
 .kfk-menu {
 	max-width: 850px;
@@ -2666,5 +2667,24 @@ table.quick-help-table td:first-of-type {
 	right: 5px;
 	bottom: 5px;
 	font-weight: 400;
-	color: rgba(0, 0, 0, 0.5);
+	color: rgba(0, 0, 0);
+}
+.kfk-workflow-info {
+	position: absolute;
+	z-index: 999;
+	left: 0px;
+	padding: 5px 10px 5px 10px;
+	width: 100%;
+	bottom: 0px;
+	font-weight: 400;
+	background-color: rgba(0, 0, 0, 0.3);
+	color: rgba(255, 255, 255, 1);
+}
+.kfk-wf-info-title {
+	font-size: 8px;
+	color: #dbdbd2;
+}
+.kfk-wf-info-value {
+	font-size: 24px;
+	color: #ffffff;
 }
