--- a/src/app.css
+++ b/src/app.css
@@ -93,24 +93,12 @@ button:focus:not(:focus-visible) {
 	}
 }
 
-.lucas {
-	font-size: 48px;
-}
-
 input {
 	border-radius: 5px;
 	border: 1px solid rgba(200, 200, 255, 0.8);
 }
-.talldiv {
-	height: 2000px;
-}
-
 section {
 	margin-top: 80px;
-}
-
-.lkh {
-	font-size: 24px;
 }
 
 html {
@@ -133,264 +121,6 @@ html {
 	background: #e50000;
 }
 
-.index_body {
-	margin: 0;
-	padding: 0;
-	background-color: #f0f0f0;
-	overscroll-behavior-x: none;
-	touch-action: manipulation;
-}
-
-#coco_todo {
-	padding: 0;
-	border-radius: 15px !important;
-}
-
-#coco_inprogress {
-	padding: 0;
-	border-radius: 15px !important;
-}
-
-#coco_done {
-	padding: 0;
-	text-decoration: line-through wavy #ff0000cc;
-	border-radius: 15px !important;
-}
-
-#coco_todo_title,
-#coco_inprogress_title,
-#coco_done_title,
-#coco_chat_title {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 36px;
-	text-align: center;
-	font-size: 24px;
-	color: #20201fc9;
-	background-color: antiquewhite;
-	border-radius: 15px 15px 0px 0px;
-}
-
-#coco_chat_title {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 36px;
-	text-align: center;
-	font-size: 24px;
-	color: #20201fc9;
-	background-color: aqua;
-	border-radius: 15px 15px 0px 0px;
-}
-
-#coco_todo_list,
-#coco_inprogress_list,
-#coco_done_list {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: calc(100% - 36px);
-	padding-left: 5%;
-	padding-right: 5%;
-	margin-top: 36px;
-	overflow-x: auto;
-	overflow-y: scroll;
-}
-
-#coco_chat {
-	z-index: 10 !important;
-	border-radius: 15px !important;
-	display: flex;
-	padding: 2px;
-	margin: 0px;
-	background-color: rgb(255, 255, 255);
-	border-width: 1px;
-	border-style: solid;
-	position: absolute;
-	top: 88px;
-	left: 86px;
-	width: 256px;
-	height: 512px;
-	background-color: aquamarine !important;
-}
-
-#coco_chat_list {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: calc(100% - 36px);
-	padding-left: 5%;
-	padding-right: 5%;
-	margin-top: 36px;
-	overflow-x: auto;
-	overflow-y: scroll;
-}
-
-.todo_item {
-	padding-left: 5px;
-	height: 1.5em;
-	font-size: 1em;
-	display: flex;
-}
-
-.todo_item .current {
-	-webkit-box-shadow: 0px 1px 2px 2px #888888 !important;
-	-moz-box-shadow: 0px 1px 2px 2px #888888 !important;
-	box-shadow: 0px 1px 20px 2px #888888 !important;
-	border-radius: 10px !important;
-}
-
-.prg {
-	position: absolute;
-	height: inherit;
-	z-index: -1;
-}
-
-.todo_item[prg='0'] .prg {
-	width: 1px;
-}
-
-.todo_item[prg='1'] .prg {
-	width: 10px;
-	background-color: #ff0000;
-}
-
-.todo_item[prg='10'] .prg {
-	width: 10%;
-	background-color: #ff3300;
-}
-
-.todo_item[prg='20'] .prg {
-	width: 20%;
-	background-color: #ff6600;
-}
-
-.todo_item[prg='30'] .prg {
-	width: 30%;
-	background-color: #ff9900;
-}
-
-.todo_item[prg='40'] .prg {
-	width: 40%;
-	background-color: #ffcc00;
-}
-
-.todo_item[prg='50'] .prg {
-	width: 50%;
-	background-color: #ffff00;
-}
-
-.todo_item[prg='60'] .prg {
-	width: 60%;
-	background-color: #ccff00;
-}
-
-.todo_item[prg='70'] .prg {
-	width: 70%;
-	background-color: #99ff00;
-}
-
-.todo_item[prg='80'] .prg {
-	width: 80%;
-	background-color: #66ff00;
-}
-
-.todo_item[prg='90'] .prg {
-	width: 90%;
-	background-color: #00ff00;
-}
-
-.todo_item[prg='100'] .prg {
-	background-color: #00ff00;
-}
-
-#coco_todo_list .todo_item:hover {
-	border-radius: 10px;
-	border: 1px solid #e5dbff;
-}
-
-#coco_inprogress_list .todo_item:hover {
-	border-radius: 10px;
-	border: 1px solid #979751;
-}
-
-#coco_done_list .todo_item:hover {
-	border-radius: 10px;
-	border: 1px solid #18d62f;
-}
-
-#chatitem_option {
-	z-index: 5;
-	background-color: aqua;
-	border: 1px solid #333333;
-	border-radius: 5px;
-	position: absolute;
-	width: 200px;
-	height: 30px;
-	overflow-x: auto;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-#chatitem_option:hover {
-	background-color: #6635e2;
-	color: white;
-}
-
-#todo_option {
-	background-color: aqua;
-	border: 1px solid #333333;
-	border-radius: 5px;
-	position: absolute;
-	width: 200px;
-	height: 180px;
-	overflow-x: auto;
-	display: flex;
-	flex-wrap: wrap;
-	z-index: 5;
-}
-
-#todo_option div {
-	width: 50px;
-	height: 30px;
-	text-align: center;
-	flex-grow: 1;
-}
-
-#todo_option div:hover {
-	border-radius: 5px;
-	background-color: #6635e2;
-	color: white;
-}
-
-.todolabel {
-	overflow: hidden;
-}
-
-.progress_halfmenu {
-	width: 50% !important;
-	text-align: center !important;
-	align-content: center !important;
-	font-size: 18px;
-	font-weight: 400;
-}
-
-.progress_title {
-	width: 100% !important;
-	text-align: center !important;
-	align-content: center !important;
-	font-size: 18px;
-	font-weight: 700;
-	background-color: navajowhite;
-}
-
-.progress_title :hover {
-	background-color: aqua;
-}
-
 input::-webkit-input-placeholder {
 	color: #68636379 !important;
 	font-size: 18px !important;
@@ -410,205 +140,7 @@ input::placeholder {
 	margin-top: 50px;
 }
 
-.logo-style {
-	font-size: 28px;
-	color: #333333;
-}
-
-.leftbkg {
-	display: none;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 500px;
-	height: 100vh;
-	/* background-color: red; */
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	background-image: url('http://localhost:8191/frontend/assets/leftbkg.svg');
-}
-
-.left_scenarios {
-	position: absolute;
-	top: 100px;
-	left: 0px;
-	width: 200px;
-	height: 100%;
-	display: none;
-}
-
-.left_top_logo {
-	position: absolute;
-	left: 20px;
-	top: 10px;
-	z-index: 10;
-	display: flex;
-	flex-direction: row;
-}
-
-.left_top_logo img {
-	height: 100px;
-	margin-right: 10px;
-}
-
-.left_top_image {
-	width: 40px;
-	height: 40px;
-	border-radius: 5px;
-	opacity: 0.3;
-}
-
-.signin-button-tr {
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	z-index: 100;
-}
-
-.signin-button {
-	width: 50%;
-}
-
-.signinform {
-	position: absolute;
-	width: 98%;
-	height: 500px;
-	top: 120px;
-	left: 50%;
-	-webkit-transform: translate(-50%, 0%);
-	-moz-transform: translate(-50%, 0%);
-	-ms-transform: translate(-50%, 0%);
-	-o-transform: translate(-50%, 0%);
-	transform: translate(-50%, 0%);
-}
-
-.signinform input,
-.registerform input {
-	font-family: monospace;
-	font-size: 20px;
-	border-radius: 20px;
-	background-color: #c2eebfd9;
-}
-
-.signinform {
-	position: absolute;
-	width: 400px;
-	height: 500px;
-	top: 120px;
-	left: 50%;
-	-webkit-transform: translate(-50%, 0%);
-	-moz-transform: translate(-50%, 0%);
-	-ms-transform: translate(-50%, 0%);
-	-o-transform: translate(-50%, 0%);
-	transform: translate(-50%, 0%);
-}
-
-.signinform input::-webkit-input-placeholder {
-	/* Edge */
-	color: #b8b3d3c9;
-	font-size: 18px;
-}
-
-.signinform input::-ms-input-placeholder {
-	/* Internet Explorer 10-11 */
-	color: #b8b3d3c9;
-	font-size: 18px;
-}
-
-.signinform input::placeholder {
-	color: #b8b3d3c9;
-	font-size: 18px;
-}
-
-.registerform input::-webkit-input-placeholder {
-	/* Edge */
-	color: #b8b3d3c9;
-	font-size: 18px;
-}
-
-.registerform input::-ms-input-placeholder {
-	/* Internet Explorer 10-11 */
-	color: #b8b3d3c9;
-	font-size: 18px;
-}
-
-.registerform input::placeholder {
-	color: #b8b3d3c9;
-	font-size: 18px;
-}
-
-/* 
-.registerform input#regUserId{
-  background-image: url("http://localhost:8191/frontend/assets/email.svg");
-}
-.registerform input#regUserName{
-  background-image: url("http://localhost:8191/frontend/assets/name-tag.svg");
-}
-.registerform input#regUserPwd{
-  background-image: url("http://localhost:8191/frontend/assets/pwd.svg");
-}
-.registerform input#regUserPwd2{
-  background-image: url("http://localhost:8191/frontend/assets/pwd.svg");
-}  */
-
-.signinform .right-eye,
-.registerform .right-eye {
-	border-radius: 20px;
-	border: 1px solid #ced4da;
-	border-left: 0px;
-	border-top-left-radius: 0px;
-	border-bottom-left-radius: 0px;
-	background-color: #c2eebfd9;
-}
-
-.fontFancyColor {
-	color: #20201fc9;
-}
-
 .toplogo {
-	position: absolute;
-	top: 15px;
-	left: 15px;
-	padding-right: 10px;
-	cursor: pointer;
-}
-
-.leftSwitch {
-	z-index: 10000000;
-	position: absolute;
-	top: 55px;
-	left: -20px;
-	width: 40px;
-	height: 40px;
-	border-radius: 20px;
-	background-color: #656bff;
-	display: flex;
-	justify-content: flex-end;
-}
-
-.rightSwitch {
-	z-index: 10000000;
-	position: absolute;
-	top: 55px;
-	right: -20px;
-	width: 40px;
-	height: 40px;
-	border-radius: 20px;
-	background-color: #656bff;
-}
-
-.minimapSwitch {
-	z-index: 10000001;
-	position: absolute;
-	bottom: 55px;
-	right: -20px;
-	width: 40px;
-	height: 40px;
-	border-radius: 20px;
-	background-color: #656bff;
-}
-
-.toplogo-mobile {
 	position: absolute;
 	top: 15px;
 	left: 15px;
@@ -2319,15 +1851,6 @@ table.quick-help-table td:first-of-type {
 	background-color: white;
 }
 
-.addjump {
-	position: absolute;
-	top: 30px;
-	right: -24px;
-	width: 24px;
-	height: 18px;
-	border-radius: 6px;
-}
-
 .nodeMessage {
 	position: absolute;
 	top: -18px;
@@ -2566,7 +2089,7 @@ table.quick-help-table td:first-of-type {
 .kfk-workflow-id,
 .kfk-work-id,
 .kfk-team-id {
-	font-size: 24px;
+	font-size: 18px;
 	text-decoration: none;
 }
 .kfk-template-info {
@@ -2683,4 +2206,9 @@ table.quick-help-table td:first-of-type {
 .kfk-wf-info-value {
 	font-size: 24px;
 	color: #ffffff;
+}
+.kfk-result-list-2 {
+	margin-top: 10px;
+	border-radius: 5px;
+	background-color: rgba(255, 255, 255, 0.3);
 }
