--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2017,6 +2017,11 @@ div.pbo {
 	border-radius: 10px;
 	box-shadow: 0 0 0 0.125em rgba(200, 200, 255, 0.5);
 }
+.kfk-highlight-current {
+	background-color: #e5dbff;
+	border-radius: 10px;
+	box-shadow: 0 0 0 0.125em rgba(255, 255, 255, 0.9);
+}
 .kfk-bottom-10 {
 	padding-bottom: 10px;
 	border-bottom-style: solid;
@@ -2109,7 +2114,6 @@ div.pbo {
 	background-color: rgba(255, 255, 255, 0.3);
 }
 .kfk-work-kvars {
-	background-color: rgba(0, 0, 255, 0.1);
 }
 .bd-callout-info {
 	border-left-color: #5bc0de;
