--- a/static/css/app.css
+++ b/static/css/app.css
@@ -375,10 +375,6 @@ html {
 	border-radius: 10px;
 }
 
-svg path {
-	fill: '#000000';
-}
-
 .yellowtip {
 	fill: '#000000';
 }
@@ -1796,13 +1792,28 @@ table.quick-help-table td:first-of-type {
 	position: absolute;
 	width: 32px;
 	height: 32px;
-	border: 2px solid #969696;
+	border: 2px solid #2726ff;
 	box-shadow: inset 0px 0px 0px 1px #969696;
 	box-sizing: border-box;
 	border-radius: 15px;
 }
 .node:hover {
-	background-color: rgba(255, 255, 0, 0.8);
+	background-color: #ffff00;
+	box-shadow: 0 0 5px 2px #ffff00;
+}
+
+.node.selected {
+	box-shadow: 0 0 5px 2px #2726ff;
+}
+
+svg path {
+	fill: '#000000';
+}
+svg path.selected {
+	stroke: #e29543;
+}
+svg text.selected tspan {
+	fill: #000000;
 }
 
 .node p {
@@ -2167,4 +2178,11 @@ div.pbo {
 }
 .kfkshadow {
 	box-shadow: 0px 0px 5px 5px #0d6efd66;
+}
+.list-group-item.active {
+	background-color: #cac7ff;
+	border-color: rgba(255, 255, 255, 0);
+}
+.list-group-item.active .shortcutkey {
+	color: #000000;
 }
