--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2361,3 +2361,35 @@ div.pbo {
 .kfk-link:hover .aniShake {
 	animation: 0.5s linear 0s infinite normal none running shaking;
 }
+.kfk-avatar-small {
+	width: 32px;
+	height: 32px;
+	border-radius: 16px;
+}
+.kfk-avatar-middle {
+	width: 80px;
+	height: 80px;
+}
+.kfk-avatar-letter-small {
+	width: 36px;
+	height: 36px;
+	border-radius: 18px;
+	border: 1px solid rgba(200, 200, 255, 0.8);
+	background-color: rgba(0, 0, 255, 0.05);
+	font-size: 24px;
+	font-weight: bolder;
+	overflow: hidden;
+}
+.kfk-avatar-letter-middle {
+	width: 80px;
+	height: 80px;
+	background-color: rgba(0, 0, 255, 0.05);
+	font-size: 36px;
+	font-weight: bolder;
+	overflow: hidden;
+	text-align: cetner;
+}
+.kfk-signature {
+	width: 100px;
+	height: 50px;
+}
